--- a/src/html/sections/section-statistics.html
+++ b/src/html/sections/section-statistics.html
@@ -11,8 +11,8 @@
                     <div class="section-text">
                         <div class="row">
                             <div class="col-12 col-lg-6">
-                                <div class="stats-item>
-                                    <h6><span class=" odometer" data-value="5,624">0</span>+</h6>
+                                <div class="stats-item">
+                                    <h6><span class="odometer" data-value="5,624">0</span>+</h6>
                                     <span>Student Enrolled</span>
                                 </div>
                             </div>
