--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Velora - @@pagetitle</title>
+    <title>Velora - Online Courses Template</title>
 
     @@include('html/includes/head.html', {pagetitle: 'Online Courses Bootstrap Template'})
 </head>
@@ -57,7 +57,7 @@
             @@include('html/layouts/footer.html')
         </div>
 
-        <!-- <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a> -->
+        <a href="#" class="back-to-top">UP</a>
     </div>
 
 
