--- a/src/html/sections/section-courses-category.html
+++ b/src/html/sections/section-courses-category.html
@@ -1,4 +1,4 @@
-<section class="section courses-category wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
+<section class="section courses-category wow wow-animated animate__fadeInUp" data-wow-delay="0.2s">
     <div class=" container">
         <div class="section-header d-lg-flex text-center text-lg-start">
             <div class="flex-shrink-0">
