--- a/src/html/sections/section-courses.html
+++ b/src/html/sections/section-courses.html
@@ -1,4 +1,4 @@
-<section class="section courses wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
+<section class="section courses wow wow-animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
     <div class="container">
         <div class="section-header">
             <h6 class="subtitle">Online Courses</h6>
