--- a/src/html/sections/section-get-started.html
+++ b/src/html/sections/section-get-started.html
@@ -1,4 +1,4 @@
-<section class="section get-started wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
+<section class="section get-started wow wow-animated animate__fadeInUp" data-wow-delay="0.2s">
     <div class="container">
         <div class="section-inner">
             <div class="row">
