--- a/src/html/sections/section-statistics.html
+++ b/src/html/sections/section-statistics.html
@@ -1,4 +1,4 @@
-<section class="section statistics wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
+<section class="section statistics wow wow-animated animate__fadeInUp" data-wow-delay="0.1s">
     <div class="container">
         <div class="stats-box">
             <div class="row">
