--- a/src/html/sections/section-testimonials.html
+++ b/src/html/sections/section-testimonials.html
@@ -1,4 +1,4 @@
-<section class="section testimonials wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
+<section class="section testimonials wow wow-animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
     <div class="container">
         <div class="section-inner">
             <div class="row">
