--- a/src/html/sections/section-about.html
+++ b/src/html/sections/section-about.html
@@ -1,7 +1,7 @@
 <section class="section about wow wow-animated animate__fadeInUp" data-wow-delay="0.2s">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-6 order-1 order-lg-0 wow wow-animated animate__fadeInUp"
+            <div class="col-12 col-md-6 order-1 order-md-0 wow wow-animated animate__fadeInUp"
                 data-wow-delay="0.4s">
                 <div class="section-image">
                     <img src="assets/images/home/welcome-img.png" alt="Welcome Image">
@@ -11,7 +11,8 @@
                         alt="SVG Shape">
                 </div>
             </div>
-            <div class="col-12 col-lg-6">
+            
+            <div class="col-12 col-md-6">
                 <div class="section-text">
                     <div class="section-header">
                         <h6 class="subtitle">Welcome To
