--- a/src/html/sections/section-courses.html
+++ b/src/html/sections/section-courses.html
@@ -6,7 +6,7 @@
         </div>
         <div class="section-content">
             <div class="row">
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card course-card-item" data-wow-duration="1s">
                         <div class="image">
                             <img src="assets/images/courses/course-img-1.jpg" alt="Course Image">
@@ -38,7 +38,7 @@
                         <span class="price">$456.00</span>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card course-card-item" data-wow-duration="1s">
                         <div class="image">
                             <img src="assets/images/courses/course-img-2.jpg" alt="Course Image">
@@ -72,7 +72,7 @@
                         <span class="price">$215.00</span>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card course-card-item" data-wow-duration="1s">
                         <div class="image">
                             <img src="assets/images/courses/course-img-3.jpg" alt="Course Image">
@@ -106,7 +106,7 @@
                         <span class="price">$320.00</span>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card course-card-item" data-wow-duration="1s">
                         <div class="image">
                             <img src="assets/images/courses/course-img-4.jpg" alt="Course Image">
@@ -140,7 +140,7 @@
                         <span class="price">$456.00</span>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card course-card-item" data-wow-duration="1s">
                         <div class="image">
                             <img src="assets/images/courses/course-img-5.jpg" alt="Course Image">
@@ -174,7 +174,7 @@
                         <span class="price">$320.00</span>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="card course-card-item" data-wow-duration="1s">
                         <div class="image">
                             <img src="assets/images/courses/course-img-6.jpg" alt="Course Image">
