--- a/src/html/sections/section-features.html
+++ b/src/html/sections/section-features.html
@@ -1,7 +1,7 @@
 <section class="section features wow wow-animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-md-4">
                 <div class="feature-item">
                     <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24">
@@ -16,7 +16,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-4" data-wow-duration="1s">
+            <div class="col-12 col-md-4" data-wow-duration="1s">
                 <div class="feature-item">
                     <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 48 48">
@@ -32,7 +32,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-4" data-wow-duration="1s">
+            <div class="col-12 col-md-4" data-wow-duration="1s">
                 <div class="feature-item">
                     <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24">
