--- a/src/html/sections/section-choose-us.html
+++ b/src/html/sections/section-choose-us.html
@@ -11,42 +11,44 @@
                     <div class="section-content">
                         <p class="mb-5">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia
                             deserunt mollit. Excepteur sint occaecat.</p>
-                        <div class="choose-feature-item" data-wow-duration="1s">
-                            <div class="icon bg-soft-amber">
-                                <!-- SVG icon here -->
+                        <div class="d-flex d-lg-block gap-3 gap-lg-0">
+                            <div class="choose-feature-item">
+                                <div class="icon bg-soft-amber">
+                                    <i class="bx bx-face bx-sm"></i>
+                                </div>
+                                <div class="text">
+                                    <h6>Face-To-Face Teaching</h6>
+                                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is
+                                        a for that an deserunt mollit.</p>
+                                </div>
                             </div>
-                            <div class="text">
-                                <h6>Face-To-Face Teaching</h6>
-                                <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is
-                                    a for that an deserunt mollit.</p>
+                            <div class="choose-feature-item">
+                                <div class="icon bg-soft-purple">
+                                    <i class="bx bx-support bx-sm"></i>
+                                </div>
+                                <div class="text">
+                                    <h6>24/7 Support Available</h6>
+                                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is
+                                        a for that an deserunt mollit.</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="choose-feature-item" data-wow-duration="1s">
-                            <div class="icon bg-soft-purple">
-                                <!-- SVG icon here -->
-                            </div>
-                            <div class="text">
-                                <h6>24/7 Support Available</h6>
-                                <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is
-                                    a for that an deserunt mollit.</p>
-                            </div>
-                        </div>
-                        <div class="choose-feature-item" data-wow-duration="1s">
-                            <div class="icon bg-soft-red">
-                                <!-- SVG icon here -->
-                            </div>
-                            <div class="text">
-                                <h6>Interactive Learning Experience</h6>
-                                <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is
-                                    a for that an deserunt mollit.</p>
+                            <div class="choose-feature-item">
+                                <div class="icon bg-soft-red">
+                                    <i class="bx bxs-magic-wand bx-sm"></i>
+                                </div>
+                                <div class="text">
+                                    <h6>Interactive Learning Experience</h6>
+                                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is
+                                        a for that an deserunt mollit.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="col-12 col-lg-6 offset-lg-1" data-wow-duration="1s">
-                <div class="section-image text-start">
+            <div class="col-12 col-lg-6 offset-lg-1">
+                <div class="section-image text-center text-lg-start">
                     <img src="assets/images/home/choose-img.png" data-speed="4" class="parallax-effect" alt="Image">
                     <div class="float-box-counter parallax-effect" data-speed="8">
                         <div class="icon me-3">
