--- a/src/html/sections/section-about.html
+++ b/src/html/sections/section-about.html
@@ -56,9 +56,9 @@
                             </li>
                         </ul>
 
-                        <a href="html/course-1.html" class="button button-lg button-outline-dark mt-4">
+                        <a href="html/course-1.html" class="button  button-outline-dark mt-4">
                             Discover More
-                            <i class='bx bx-right-arrow-alt ms-1'></i>
+                            <i class='bx bx-right-arrow-alt '></i>
                         </a>
                         <img src="assets/images/abstracts/abstract-circle-wave.svg" class="abs v-animate rotate-scale"
                             alt="SVG Shape">
