--- a/src/html/sections/section-choose-us.html
+++ b/src/html/sections/section-choose-us.html
@@ -11,7 +11,7 @@
                     <div class="section-content">
                         <p class="mb-5">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia
                             deserunt mollit. Excepteur sint occaecat.</p>
-                        <div class="d-flex d-lg-block gap-3 gap-lg-0">
+                        <div class="d-md-flex d-lg-block gap-3 gap-lg-0">
                             <div class="choose-feature-item">
                                 <div class="icon bg-soft-amber">
                                     <i class="bx bx-face bx-sm"></i>
