--- a/src/html/sections/section-blog-article.html
+++ b/src/html/sections/section-blog-article.html
@@ -11,7 +11,7 @@
                 <div class="flex-grow-1 text-lg-end align-self-center mb-2">
                     <a href="#" class="button button-main">
                         Discover More
-                        <i class='bx bx-right-arrow-alt ms-1'></i>
+                        <i class='bx bx-right-arrow-alt'></i>
                     </a>
                 </div>
             </div>
