--- a/src/html/sections/section-get-started.html
+++ b/src/html/sections/section-get-started.html
@@ -26,7 +26,7 @@
                             cupidatat non proident sunt in culpa qui officia deserunt
                             mollit. Excepteur sint occaecat.</p>
 
-                        <a href="#" class="button button-white button-lg" data-wow-delay="1.2s">
+                        <a href="#" class="button button-white " data-wow-delay="1.2s">
                             Start Learning Today
                             <span><i class='bx bx-right-arrow-alt'></i></span>
                         </a>
