--- a/src/html/sections/section-testimonials.html
+++ b/src/html/sections/section-testimonials.html
@@ -10,7 +10,7 @@
                             </h3>
                             <p class="mb-4">However, if you meant to translate an actual text (not
                                 placeholder text), please provide the original Arabic text</p>
-                            <a href="#" class="button button-lg button-main">View More <i class="bx bx-right-arrow-alt ms-1"></i></a>
+                            <a href="#" class="button  button-main">View More <i class="bx bx-right-arrow-alt "></i></a>
                         </div>
                     </div>
                 </div>
