--- a/src/html/sections/section-about.html
+++ b/src/html/sections/section-about.html
@@ -1,8 +1,7 @@
 <section class="section about wow wow-animated animate__fadeInUp" data-wow-delay="0.2s">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-6 order-1 order-md-0 wow wow-animated animate__fadeInUp"
-                data-wow-delay="0.4s">
+            <div class="col-12 col-md-6 order-1 order-md-0 wow wow-animated animate__fadeInUp" data-wow-delay="0.4s">
                 <div class="section-image">
                     <img src="assets/images/home/welcome-img.png" alt="Welcome Image">
                     <img src="assets/images/abstracts/abstract-dots-2.svg" class="abs v-animate move-left-right"
@@ -11,7 +10,7 @@
                         alt="SVG Shape">
                 </div>
             </div>
-            
+
             <div class="col-12 col-md-6">
                 <div class="section-text">
                     <div class="section-header">
@@ -56,7 +55,7 @@
                             </li>
                         </ul>
 
-                        <a href="html/course-1.html" class="button  button-outline-dark mt-4">
+                        <a href="html/course-1.html" class="button button-icon button-outline-dark mt-4">
                             Discover More
                             <i class='bx bx-right-arrow-alt '></i>
                         </a>
