--- a/src/html/sections/section-blog-article.html
+++ b/src/html/sections/section-blog-article.html
@@ -9,7 +9,7 @@
                     </h3>
                 </div>
                 <div class="flex-grow-1 text-lg-end align-self-center mb-2">
-                    <a href="#" class="button button-main">
+                    <a href="#" class="button button-icon button-main">
                         Discover More
                         <i class='bx bx-right-arrow-alt'></i>
                     </a>
