--- a/src/html/sections/section-testimonials.html
+++ b/src/html/sections/section-testimonials.html
@@ -10,7 +10,8 @@
                             </h3>
                             <p class="mb-4">However, if you meant to translate an actual text (not
                                 placeholder text), please provide the original Arabic text</p>
-                            <a href="#" class="button  button-main">View More <i class="bx bx-right-arrow-alt "></i></a>
+                            <a href="#" class="button button-icon button-main">View More <i
+                                    class="bx bx-right-arrow-alt "></i></a>
                         </div>
                     </div>
                 </div>
@@ -93,8 +94,10 @@
                             <span class="quote-icon-bg"><i class='bx bxs-quote-left'></i></span>
                         </div>
 
-                        <img src="assets/images/abstracts/abstract-dots-2.svg" class="abs v-animate move-up-down" alt="SVG Shape">
-                        <img src="assets/images/abstracts/abstract-golden-1.svg" class="abs v-animate move-left-right" alt="SVG Shape">
+                        <img src="assets/images/abstracts/abstract-dots-2.svg" class="abs v-animate move-up-down"
+                            alt="SVG Shape">
+                        <img src="assets/images/abstracts/abstract-golden-1.svg" class="abs v-animate move-left-right"
+                            alt="SVG Shape">
                     </div>
                 </div>
             </div>
