--- a/src/html/sections/section-courses.html
+++ b/src/html/sections/section-courses.html
@@ -26,13 +26,13 @@
                                 </span>
                             </div>
                             <h6><a href="#">Data Competitive Strategy law and Organization Course</a></h6>
-                            <div class="rates">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <div class="rates d-flex align-items-start">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                                     <path fill="currentColor"
                                         d="M17.562 21.56a1 1 0 0 1-.465-.115L12 18.765l-5.097 2.68a1 1 0 0 1-1.451-1.054l.973-5.676l-4.123-4.02a1 1 0 0 1 .554-1.705l5.699-.828l2.548-5.164a1.042 1.042 0 0 1 1.794 0l2.548 5.164l5.699.828a1 1 0 0 1 .554 1.706l-4.123 4.019l.973 5.676a1 1 0 0 1-.986 1.169" />
                                 </svg>
                                 4.95
-                                <span>(09 Reviews)</span>
+                                <span class="ms-2">(09 Reviews)</span>
                             </div>
                         </div>
                         <span class="price">$456.00</span>
@@ -60,13 +60,13 @@
                             <h6>
                                 <a href="#">Digital Marketing Strategies for 2024</a>
                             </h6>
-                            <div class="rates">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <div class="rates d-flex align-items-start">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                                     <path fill="currentColor"
                                         d="M17.562 21.56a1 1 0 0 1-.465-.115L12 18.765l-5.097 2.68a1 1 0 0 1-1.451-1.054l.973-5.676l-4.123-4.02a1 1 0 0 1 .554-1.705l5.699-.828l2.548-5.164a1.042 1.042 0 0 1 1.794 0l2.548 5.164l5.699.828a1 1 0 0 1 .554 1.706l-4.123 4.019l.973 5.676a1 1 0 0 1-.986 1.169" />
                                 </svg>
                                 4.95
-                                <span>(09 Reviews)</span>
+                                <span class="ms-2">(09 Reviews)</span>
                             </div>
                         </div>
                         <span class="price">$215.00</span>
@@ -94,13 +94,13 @@
                             <h6>
                                 <a href="#">Introduction to Data Science with Python</a>
                             </h6>
-                            <div class="rates">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <div class="rates d-flex align-items-start">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                                     <path fill="currentColor"
                                         d="M17.562 21.56a1 1 0 0 1-.465-.115L12 18.765l-5.097 2.68a1 1 0 0 1-1.451-1.054l.973-5.676l-4.123-4.02a1 1 0 0 1 .554-1.705l5.699-.828l2.548-5.164a1.042 1.042 0 0 1 1.794 0l2.548 5.164l5.699.828a1 1 0 0 1 .554 1.706l-4.123 4.019l.973 5.676a1 1 0 0 1-.986 1.169" />
                                 </svg>
                                 4.95
-                                <span>(09 Reviews)</span>
+                                <span class="ms-2">(09 Reviews)</span>
                             </div>
                         </div>
                         <span class="price">$320.00</span>
@@ -128,13 +128,13 @@
                             <h6>
                                 <a href="">UI/UX Design Principles & Figma Mastery</a>
                             </h6>
-                            <div class="rates">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <div class="rates d-flex align-items-start">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                                     <path fill="currentColor"
                                         d="M17.562 21.56a1 1 0 0 1-.465-.115L12 18.765l-5.097 2.68a1 1 0 0 1-1.451-1.054l.973-5.676l-4.123-4.02a1 1 0 0 1 .554-1.705l5.699-.828l2.548-5.164a1.042 1.042 0 0 1 1.794 0l2.548 5.164l5.699.828a1 1 0 0 1 .554 1.706l-4.123 4.019l.973 5.676a1 1 0 0 1-.986 1.169" />
                                 </svg>
                                 4.95
-                                <span>(09 Reviews)</span>
+                                <span class="ms-2">(09 Reviews)</span>
                             </div>
                         </div>
                         <span class="price">$456.00</span>
@@ -162,13 +162,13 @@
                             <h6>
                                 <a href="#">Introduction to Data Science with Python</a>
                             </h6>
-                            <div class="rates">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <div class="rates d-flex align-items-start">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                                     <path fill="currentColor"
                                         d="M17.562 21.56a1 1 0 0 1-.465-.115L12 18.765l-5.097 2.68a1 1 0 0 1-1.451-1.054l.973-5.676l-4.123-4.02a1 1 0 0 1 .554-1.705l5.699-.828l2.548-5.164a1.042 1.042 0 0 1 1.794 0l2.548 5.164l5.699.828a1 1 0 0 1 .554 1.706l-4.123 4.019l.973 5.676a1 1 0 0 1-.986 1.169" />
                                 </svg>
                                 4.95
-                                <span>(09 Reviews)</span>
+                                <span class="ms-2">(09 Reviews)</span>
                             </div>
                         </div>
                         <span class="price">$320.00</span>
@@ -196,13 +196,13 @@
                             <h6>
                                 <a href="">UI/UX Design Principles & Figma Mastery</a>
                             </h6>
-                            <div class="rates">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <div class="rates d-flex align-items-start">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                                     <path fill="currentColor"
                                         d="M17.562 21.56a1 1 0 0 1-.465-.115L12 18.765l-5.097 2.68a1 1 0 0 1-1.451-1.054l.973-5.676l-4.123-4.02a1 1 0 0 1 .554-1.705l5.699-.828l2.548-5.164a1.042 1.042 0 0 1 1.794 0l2.548 5.164l5.699.828a1 1 0 0 1 .554 1.706l-4.123 4.019l.973 5.676a1 1 0 0 1-.986 1.169" />
                                 </svg>
                                 4.95
-                                <span>(09 Reviews)</span>
+                                <span class="ms-2">(09 Reviews)</span>
                             </div>
                         </div>
                         <span class="price">$456.00</span>
