Chnage button hover effect

--- a/src/html/sections/section-about.html
+++ b/src/html/sections/section-about.html
@@ -56,7 +56,7 @@
                         </ul>
 
                         <a href="html/course-1.html" class="button button-icon button-outline-dark mt-4">
-                            Discover More
+                            <span>Discover More</span>
                             <i class='bx bx-right-arrow-alt '></i>
                         </a>
                         <img src="assets/images/abstracts/abstract-circle-wave.svg" class="abs v-animate rotate-scale"
