--- a/src/html/sections/section-blog-article.html
+++ b/src/html/sections/section-blog-article.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="flex-grow-1 text-lg-end align-self-center mb-2">
                     <a href="#" class="button button-icon button-main">
-                        Discover More
+                        <span>Discover More</span>
                         <i class='bx bx-right-arrow-alt'></i>
                     </a>
                 </div>
