--- a/src/html/sections/section-courses-category.html
+++ b/src/html/sections/section-courses-category.html
@@ -9,8 +9,8 @@
             </div>
             <div class="flex-grow-1 text-lg-end align-self-center mb-2">
                 <a href="#" class="button button-icon button-main">
-                    Find Courses
-                    <span><i class='bx bx-right-arrow-alt'></i></span>
+                    <span>Find Courses</span>
+                    <i class='bx bx-right-arrow-alt'></i>
                 </a>
             </div>
         </div>
