--- a/src/html/sections/section-get-started.html
+++ b/src/html/sections/section-get-started.html
@@ -28,7 +28,7 @@
 
                         <a href="#" class="button button-white button-icon" data-wow-delay="1.2s">
                             Start Learning Today
-                            <span><i class='bx bx-right-arrow-alt'></i></span>
+                            <i class='bx bx-right-arrow-alt'></i>
                         </a>
                     </div>
                 </div>
