--- a/src/html/sections/section-choose-us.html
+++ b/src/html/sections/section-choose-us.html
@@ -49,7 +49,7 @@
 
             <div class="col-12 col-lg-6 offset-lg-1">
                 <div class="section-image text-center text-lg-start">
-                    <img src="assets/images/home/choose-img.png" data-speed="4" class="parallax-effect" alt="Image">
+                    <img src="assets/images/home/choose-img.jpg" data-speed="4" width="340" class="parallax-effect" alt="Image">
                     <div class="float-box-counter parallax-effect" data-speed="8">
                         <div class="icon me-3">
                             <!-- SVG icon here -->
