--- a/src/html/sections/section-choose-us.html
+++ b/src/html/sections/section-choose-us.html
@@ -18,7 +18,8 @@
                                 </div>
                                 <div class="text">
                                     <h6>Face-To-Face Teaching</h6>
-                                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is
+                                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this
+                                        is
                                         a for that an deserunt mollit.</p>
                                 </div>
                             </div>
@@ -28,7 +29,8 @@
                                 </div>
                                 <div class="text">
                                     <h6>24/7 Support Available</h6>
-                                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is
+                                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this
+                                        is
                                         a for that an deserunt mollit.</p>
                                 </div>
                             </div>
@@ -38,7 +40,8 @@
                                 </div>
                                 <div class="text">
                                     <h6>Interactive Learning Experience</h6>
-                                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is
+                                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this
+                                        is
                                         a for that an deserunt mollit.</p>
                                 </div>
                             </div>
@@ -48,14 +51,18 @@
             </div>
 
             <div class="col-12 col-lg-6 offset-lg-1">
-                <div class="section-image text-center text-lg-start">
-                    <img src="assets/images/home/choose-img.jpg" data-speed="4" width="340" class="parallax-effect" alt="Image">
-                    <div class="float-box-counter parallax-effect" data-speed="8">
-                        <div class="icon me-3">
-                            <!-- SVG icon here -->
+                <div class="section-image text-center text-lg-end">
+                    <img src="assets/images/home/choose-img.png" width="400" alt="Image">
+                    <div class="float-box-counter d-flex items-start">
+                        <div class="flex-shrink-0 me-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24">
+                                <path fill="#ffad11" fill-rule="evenodd"
+                                    d="M11.998 21.076c-.53 0-.85 0-1.17-.14c-.42-.17-.77-.52-.94-.95c-.13-.32-.13-.64-.13-1.17v-13c0-.53 0-.85.13-1.17c.18-.43.51-.77.95-.95c.32-.13.64-.13 1.17-.13s.85 0 1.17.13c.43.18.77.52.95.95c.13.32.13.64.13 1.17v13c0 .53 0 .85-.13 1.17c-.18.43-.52.77-.95.95c-.32.13-.64.13-1.17.13zm0-16c-.26 0-.53 0-.6.02c-.06.02-.1.07-.13.13c-.02.06-.02.33-.02.6v13c0 .26 0 .53.02.6c.02.06.07.11.13.13c.14.04 1.06.04 1.2 0a.21.21 0 0 0 .13-.13c.02-.06.02-.33.02-.59v-13c0-.26 0-.53-.02-.6a.21.21 0 0 0-.13-.13c-.06-.02-.33-.02-.59-.02zM5 21.074c-.53 0-.85 0-1.17-.13c-.43-.18-.77-.52-.95-.95c-.13-.32-.13-.64-.13-1.17v-9c0-.53 0-.85.13-1.17c.18-.43.52-.77.95-.95c.32-.13.64-.13 1.17-.13s.85 0 1.17.13c.43.18.77.52.95.95c.13.32.13.64.13 1.17v9c0 .53 0 .85-.13 1.17c-.18.43-.52.77-.95.95c-.32.13-.64.13-1.17.13m0-12c-.26 0-.53 0-.6.02c-.06.02-.1.07-.13.13c-.02.06-.02.33-.02.6v9c0 .26 0 .53.02.6c.02.06.07.11.13.13c.13.04 1.06.04 1.2 0c.06-.02.1-.07.13-.13c.02-.06.02-.33.02-.6v-9c0-.26 0-.53-.02-.6a.21.21 0 0 0-.13-.13c-.06-.02-.33-.02-.6-.02m12.83 11.87c.32.13.64.13 1.17.13s.85 0 1.17-.13c.43-.18.77-.52.95-.95c.13-.32.13-.64.13-1.17v-6c0-.53 0-.85-.13-1.17c-.18-.43-.52-.77-.95-.95c-.32-.13-.64-.13-1.17-.13s-.85 0-1.17.13c-.43.18-.77.52-.95.95c-.13.32-.13.64-.13 1.17v6c0 .53 0 .85.13 1.17c.18.43.52.77.95.95m1.17-8.87c.27 0 .54 0 .6.02s.11.07.13.13c.02.07.02.34.02.6v6c0 .27 0 .54-.02.6c-.03.06-.07.11-.13.13c-.14.04-1.07.04-1.2 0a.21.21 0 0 1-.13-.13c-.02-.07-.02-.34-.02-.6v-6c0-.27 0-.54.02-.6c.03-.06.07-.11.13-.13c.07-.02.34-.02.6-.02"
+                                    color="#ffad11" />
+                            </svg>
                         </div>
-                        <div class="text">
-                            <h6><span class="odometer" data-value="8540">0</span>K+</h6>
+                        <div class="flex-grow-1">
+                            <h6 class="fs-4 fw-bolder"><span class="odometer" data-value="8540">0</span>K+</h6>
                             <p class="mb-0">Satisfied Students</p>
                         </div>
                     </div>
